--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Flask-Login==0.5.0
 Flask-WTF==1.0.0
 SQLAlchemy==1.4.23
 Werkzeug==2.0.1
-python-dotenv==0.19.0
+python-dotenv
 flask-paginate
 Flask-Migrate
 gunicorn
