Fix JavaScript linter errors and improve dashboard charts - Separate dashboard.js file to avoid Jinja template linter issues - Add database troubleshooting guide - Add database connection test script - Update requirements.txt - Improve asset management functionality

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 pytz
-Flask==2.0.1
-Flask-SQLAlchemy==2.5.1
-Flask-Login==0.5.0
-Flask-WTF==1.0.0
-SQLAlchemy==1.4.23
-Werkzeug==2.0.1
-python-dotenv
-flask-paginate
-Flask-Migrate
-gunicorn
-Flask-Babel
-psycopg2-binary
+Flask==2.3.3
+Flask-SQLAlchemy==3.0.5
+Flask-Login==0.6.3
+Flask-WTF==1.1.1
+SQLAlchemy==2.0.21
+Werkzeug==2.3.7
+python-dotenv==1.0.0
+flask-paginate==2022.1.8
+Flask-Migrate==4.0.5
+gunicorn==21.2.0
+Flask-Babel==4.0.0
+psycopg2-binary==2.9.7
