--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,5 @@ flask-paginate==2022.1.8
 Flask-Migrate==4.0.5
 gunicorn==21.2.0
 Flask-Babel==4.0.0
-psycopg2-binary==2.9.7
+psycopg2-binary>=2.9.9
 SQLAlchemy>=2.0.32
